# soft_heating_system_submodule

./: CMakeLists.txt
config/: heat_config.yaml
dependencies/git_submodule_depA/: class.cpp
includes/: heating_controller.h
src/: heating_controller.cpp  main.cpp
tests/: CMakeLists.txt  heatingControllerTest.h  heating_server.py  main.cpp  run_heatingTests.py
